Add parking schedule loading data and editing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,11 @@
         <item>Nie</item>
     </string-array>
 
+    <string-array name="typpojazdu">
+        <item>Samochód osobowy</item>
+        <item>Tir</item>
+        <item>Motocykl</item>
+        <item>Autobus</item>
+    </string-array>
+
 </resources>
