--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,13 @@
         <item>Motocykl</item>
         <item>Autobus</item>
     </string-array>
+
+    <string-array name="ranga">
+        <item>Użytkownik</item>
+        <item>Moderator</item>
+        <item>Administrator</item>
+    </string-array>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
